--- a/views/resources/css/style.css
+++ b/views/resources/css/style.css
@@ -130,3 +130,13 @@ span.psw {
     border-style: solid;
     border-color: #ccc #888 #555 #bbb;
 }
+
+#data_menu td {
+    padding: 5px;
+    border: 1px solid black;
+}
+
+td.vip {
+    background-color: #30d852;
+    color: #fff;
+}
