Pagina de rapoarte

--- a/views/body.html
+++ b/views/body.html
@@ -13,13 +13,13 @@
     <div id="menu1">
         <ul>
             <a href="main">
-                <li>Pagina principala</li>
+                <li>Informatii clienti</li>
             </a>
             <a href="card">
-                <li>Informatii Card</li>
+                <li>Carduri</li>
             </a>
-            <a href="">
-                <li>Istoric Rapoarte</li>
+            <a href="report">
+                <li>Rapoarte</li>
             </a>
             <a href="">
                 <li>Adauga card</li>
