--- a/views/card.ejs
+++ b/views/card.ejs
@@ -5,7 +5,8 @@
     <table id="data_menu">
         <% for(var i=0; i < result.length; i++) { %>
         <tr>
-            <td>ID card: <%= result[i].id_card %></td>
+            <td>Card: <%= result[i].id_card %></td>
+            <td>Puncte: <b><%= result[i].nr_puncte_disponibile %></b></td>
             <td>Nume: <%= result[i].nume_client %></td>
             <td>Valabil de la: <b><%= result[i].data_emitere %></b> pana la: <b><%= result[i].data_expirare %></b></td>
             <% if (result[i].vip == 1) { %> <td class="vip"> card VIP </td> <% } %>            
