--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
                 <label for="password"><b>Parola</b></label>
                 <input type="text" placeholder="Introduceti parola" name="password" required>
 
-                <button type="submit">Logare</button>
+                <button type="submit" id="loginButton">Logare</button>
 
                 <span class="psw">Am uitat <a href="#">parola?</a></span>
                 
