Implementare login, logout

--- a/views/body.html
+++ b/views/body.html
@@ -25,4 +25,5 @@
                 <li>Adauga card</li>
             </a>
         </ul>
+        <form action="logout"><button>Deconectare</button></form>
     </div>
