--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 <body>
     <div id="page">
 
-        <form id="mainLoginForm" action="/" method="POST">
+        <form id="mainLoginForm" action="auth" method="POST">
             <div class="imgcont">
                 <img src="media/logo.png" alt="Avatar" class="avatar">
             </div>
