--- a/views/body.html
+++ b/views/body.html
@@ -18,12 +18,14 @@
             <a href="card">
                 <li>Carduri</li>
             </a>
-            <a href="report">
+            <a href="lista_rapoarte">
                 <li>Rapoarte</li>
             </a>
             <a href="">
                 <li>Adauga card</li>
             </a>
         </ul>
+        <br>
         <form action="logout"><button>Deconectare</button></form>
+        <br>
     </div>
