Rapoarte, resetare parola

--- a/views/body.html
+++ b/views/body.html
@@ -25,7 +25,7 @@
                 <li>Adauga card</li>
             </a>
         </ul>
-        <br>
-        <form action="logout"><button>Deconectare</button></form>
-        <br>
+        <br />
+        <form action="logout"><button id="loginButton">Deconectare</button></form>
+        <form action="resetare_parola"><button id="loginButton">Resetare parola</button></form>
     </div>
