Rectificare camp password login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
                 <input type="text" placeholder="Introduceti Username" class="loginInput" name="username" required>
 
                 <label for="password"><b>Parola</b></label>
-                <input type="text" placeholder="Introduceti parola" class="loginInput" name="password" required>
+                <input type="password" placeholder="Introduceti parola" class="loginInput" name="password" required>
 
                 <button type="submit" id="loginButton">Logare</button>
 
